--- a/styles/style.css
+++ b/styles/style.css
@@ -41,128 +41,9 @@ a {
   margin: 0 auto;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  position: fixed;
-  top: 1.5rem;
-  left: 0;
-  right: 0;
-  z-index: 10;
-}
-
-header .logo {
-  width: 4rem;
-}
-
-.nav-btn {
-  height: 3rem;
-  width: 3rem;
-  background-color: var(--clr-accent);
-  border: none;
-  cursor: pointer;
-  position: relative;
-  z-index: 11;
-}
-
-.nav-btn .line {
-  display: block;
-  height: 0.1rem;
-  background-color: var(--clr-dark);
-  transition: all 100ms ease-in;
-}
-
-.line-middle {
-  width: 60%;
-  margin-top: 0.3rem;
-  margin-bottom: 0.3rem;
-}
-
-.line-top,
-.line-bottom {
-  width: 80%;
-  margin-inline: auto;
-}
-
-.line-top-rotate {
-  transform: rotate(45deg);
-  transform-origin: top;
-}
-
-.line-bottom-rotate {
-  transform: rotate(-45deg);
-  transform-origin: bottom;
-}
-.line-middle-hide {
-  opacity: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.header-nav .contact-btn-container {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: var(--clr-accent);
-  font-size: 0.9rem;
-  height: 5rem;
-  width: 5rem;
-}
-
-.header-nav .contact-btn-container .contact-btn {
-  background-color: transparent;
-  border: 0;
-  display: grid;
-  gap: 3px;
-}
-.header-nav .contact-btn-container .contact-btn div > * {
-  display: inline-block;
-}
-
-.header-nav .contact-btn-container .contact-btn div span:nth-child(1) {
-  text-transform: capitalize;
-}
-
-.header-nav .contact-btn-container .contact-btn div span:nth-child(odd) {
-  transition: all 0.3s ease-in-out;
-}
-.header-nav .contact-btn-container:hover .contact-btn div span:nth-child(odd) {
-  transform: translateY(-5px);
-}
-
-.sm-screen-nav {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  background-color: var(--clr-bg);
-  font-size: 2rem;
-  text-transform: capitalize;
-  font-weight: bolder;
-  transform: translateY(-100%);
-  transition: all 300ms ease-in;
-}
-
-.sm-screen-nav a:last-child {
-  background-color: var(--clr-dark);
-  color: var(--clr-bg);
-  padding: 0.5rem;
-}
-
-.show-nav-menu {
-  transform: translateY(0);
-}
-
 /* Main starts here */
 
-main {
+.main {
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -240,8 +121,6 @@ main {
     transform: translate(0);
   }
 }
-
-
 
 .social-icons-container p {
   color: #999;
@@ -322,21 +201,21 @@ main {
   height: 100%;
   width: 100%;
   background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 0.3)),
-    to(rgba(0, 0, 0, 0.3))
-  ),
-  url(/assets/images/services.jpg);
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.3)),
+      to(rgba(0, 0, 0, 0.3))
+    ),
+    url(/assets/images/services.jpg);
 
-background-size: cover;
-background-repeat: no-repeat;
-background-position: auto;
-position: absolute;
-top: 0;
-left: 0;
-/* display: none; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* display: none; */
 }
 
 /* .bg-img-reviews {
@@ -393,7 +272,7 @@ left: 0;
   margin-bottom: 3rem;
 }
 
-form {
+.aside form {
   display: grid;
   grid-template-areas:
     'fname'
@@ -410,8 +289,8 @@ form {
   grid-area: fname;
 }
 
-input,
-textarea {
+.aside input,
+.aside textarea {
   color: var(--clr-bg);
   background-color: inherit;
   width: 100%;
@@ -426,22 +305,22 @@ textarea {
 .lname {
   grid-area: lname;
 }
-input[type='email'] {
+.aside input[type='email'] {
   grid-area: email;
 }
 
-textarea {
+.aside textarea {
   grid-area: text;
 }
 
-button[type='submit'] {
+.aside button[type='submit'] {
   grid-area: btn;
   width: 7rem;
   justify-self: center;
 }
 
 @media screen and (min-width: 600px) {
-  form {
+  .aside form {
     grid-template-areas:
       'fname lname'
       'email email'
@@ -452,17 +331,6 @@ button[type='submit'] {
 }
 
 @media screen and (min-width: 900px) {
-  header .logo {
-    width: 6rem;
-  }
-  .nav-btn {
-    display: none;
-  }
-
-  .header-nav .contact-btn-container {
-    display: flex;
-  }
-
   .main-content {
     height: calc(100% - 150px);
     width: 90vw;
