--- a/styles/footer-style.css
+++ b/styles/footer-style.css
@@ -1,6 +1,5 @@
 footer {
   background-color: var(--clr-dark);
-  height: 150px;
   display: grid;
   place-items: center;
 }
@@ -10,10 +9,15 @@ footer {
   text-transform: uppercase;
   display: grid;
   gap: 0.5rem;
-  justify-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .social-icons {
   font-size: 2rem;
   display: flex;
   gap: 2rem;
+}
+.copy-right {
+  margin-top: 0.5rem;
+  color: var(--clr-bg);
 }
