--- a/styles/header-style.css
+++ b/styles/header-style.css
@@ -56,7 +56,7 @@ header .logo {
   margin-bottom: 0;
 }
 
-.header-nav .contact-btn-container {
+.contact-btn-container {
   display: none;
   align-items: center;
   justify-content: center;
@@ -65,14 +65,24 @@ header .logo {
   font-size: 0.9rem;
   height: 5rem;
   width: 5rem;
+  transition: all 0.5s ease-in;
 }
 
-.header-nav .contact-btn-container .contact-btn {
+.contact-btn-container .contact-btn {
   background-color: transparent;
   border: 0;
   display: grid;
   gap: 3px;
 }
+
+.contact-btn-container:hover {
+  background-color: var(--clr-dark);
+}
+
+.contact-btn-container:hover .contact-btn {
+  color: var(--clr-bg);
+}
+
 .header-nav .contact-btn-container .contact-btn div > * {
   display: inline-block;
 }
@@ -105,6 +115,16 @@ header .logo {
   font-weight: bolder;
   transform: translateY(-100%);
   transition: all 300ms ease-in;
+}
+
+.sm-screen-nav button {
+  font-size: 2rem;
+  text-transform: capitalize;
+  font-weight: bolder;
+  background-color: transparent;
+  border: none;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .sm-screen-nav a:last-child {
