--- a/styles/reviews-style.css
+++ b/styles/reviews-style.css
@@ -10,6 +10,7 @@
   --clr-accent: #ebff00;
 }
 
+
 html {
   line-height: 1.5;
 }
@@ -23,6 +24,10 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+h1 {
+  margin: 0;
 }
 
 a {
@@ -40,12 +45,32 @@ section {
 }
 
 .bg-img {
-  height: 100vh;
-  color: var(--clr-dark);
+  height: calc(100vh + 5rem);
+  display: grid;
+  align-content: center;
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.465),
+      rgba(0, 0, 0, 0.459)
+    ),
+    url(/images/reviews.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
 }
 
+.title-text {
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.082),
+    rgba(0, 0, 0, 0.075)
+  );
+}
+
+
 .bg-img h1 {
-  padding-top: 13rem;
+  
   text-transform: capitalize;
   font-size: 2rem;
   margin-bottom: 2rem;
@@ -55,7 +80,7 @@ section {
 .divider {
   width: 90%;
   height: 2px;
-  background-color: var(--clr-dark);
+  background-color: var(--clr-bg);
   margin-bottom: 3rem;
 }
 
@@ -138,8 +163,11 @@ section {
 }
 
 @media screen and (min-width: 900px) {
+
   .bg-img {
-    height: 70vh;
+    height: 100vh;
+  display: grid;
+  align-content: center;
   }
   .bg-img h1 {
     text-transform: capitalize;
