--- a/styles/services_style.css
+++ b/styles/services_style.css
@@ -9,7 +9,9 @@
   --clr-bg: #f5f5f5;
   --clr-accent: #ebff00;
 }
-
+html {
+  line-height: 1.5;
+}
 body {
   min-height: 100vh;
   color: var(--clr-dark);
@@ -18,6 +20,10 @@ body {
 
 img {
   max-width: 100%;
+}
+
+h1 {
+  margin: 0;
 }
 
 a {
@@ -35,29 +41,40 @@ section {
 }
 
 /* Main */
-main {
+/* main {
   display: grid;
-  grid-template-rows: 100vh auto auto;
-}
+  grid-template-rows: 100% auto auto;
+} */
 
 .bg-img {
+  height: calc(100vh + 5rem);
+  display: grid;
+  align-content: center;
   background-image: linear-gradient(
       180deg,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3)
+      rgba(0, 0, 0, 0.465),
+      rgba(0, 0, 0, 0.459)
     ),
-    url('/assets/office-g9102ce386_640.jpg');
+    url(/assets/images/services.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
 }
 
+.title-text {
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.082),
+    rgba(0, 0, 0, 0.075)
+  );
+}
+
 .bg-img h1 {
-  margin-top: 13rem;
   text-transform: capitalize;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 2rem;
+  letter-spacing: 2px;
 }
 
 .divider {
@@ -68,9 +85,8 @@ main {
 }
 
 .bg-img p {
-  font-size: 1.75rem;
+  font-size: 1.2rem;
   font-weight: 200;
-  line-height: 1.5;
   letter-spacing: 2px;
 }
 
@@ -172,7 +188,7 @@ main {
   background-color: var(--clr-dark);
   color: var(--clr-bg);
   border: none;
-  padding:0 0.5rem;
+  padding: 0 0.5rem;
   font-size: 2rem;
   cursor: pointer;
 }
@@ -272,6 +288,19 @@ select {
 }
 
 @media screen and (min-width: 900px) {
+  .bg-img {
+    height: 100vh;
+  display: grid;
+  align-content: center;
+  }
+  .bg-img h1 {
+    font-size: 2.5rem;
+  }
+
+  .bg-img p {
+    font-size: 1.6rem;
+  }
+
   .services-containter {
     margin-inline: auto;
     width: 95vw;
