--- a/styles/services_style.css
+++ b/styles/services_style.css
@@ -151,6 +151,7 @@ section {
   font-style: italic;
 }
 
+
 .modal-overlay {
   width: 100%;
   height: 100%;
@@ -260,6 +261,17 @@ select {
   background-color: var(--clr-dark);
   color: var(--clr-bg);
   letter-spacing: 2px;
+  transition: all 0.3s linear;
+}
+
+.book-btn:hover {
+  background-color: var(--clr-accent);
+  color: var(--clr-dark);
+  font-weight: bold;
+}
+
+.book-btn:active {
+ transform: translateY(-5px);
 }
 
 .booking-section {
