--- a/styles/sidebars.css
+++ b/styles/sidebars.css
@@ -3,30 +3,19 @@ body {
   min-height: -webkit-fill-available;
 }
 
-
-
 main {
   display: flex;
-  /* flex-wrap: nowrap; */
+  flex-direction: column;
+  flex-wrap: nowrap;
   height: 100vh;
-  /* height: -webkit-fill-available; */
-  /* max-height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
   overflow-x: auto;
-  overflow-y: hidden; */
+  overflow-y: hidden;
 }
 
+.dropdown-toggle { outline: 0; }
 
-/* .bi {
-  vertical-align: -.125em;
-  pointer-events: none;
-  fill: currentColor;
-} */
-
-/* .dropdown-toggle { outline: 0; } */
-
-/* .nav-flush .nav-link {
-  border-radius: 0;
-} */
 
 .btn-toggle {
   display: inline-flex;
