--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,6 @@
 :root {
   --ff-body: 'Playfair Display', serif;
   --ff-second: 'Montserrat', sans-serif;
-
   --clr-dark: #1d1b26;
   --clr-bg: #f5f5f5;
   --clr-accent: #ebff00;
@@ -69,7 +68,7 @@ a {
   font-size: clamp(0.9rem, 2vw, 1.2rem);
   line-height: 1.5;
   letter-spacing: 2px;
-
+  
   animation-name: fadeIdIntro;
   animation-duration: 1.5s;
   animation-timing-function: linear;
@@ -82,6 +81,10 @@ a {
   to {
     transform: translate(0);
   }
+}
+
+.intro-top {
+  color: var(--clr-font-grey);
 }
 
 .about-me-btn {
@@ -218,6 +221,8 @@ a {
   position: absolute;
   top: 0;
   left: 0;
+  opacity: 0;
+  transition: all 1s ease-in;
 }
 .main-right::after {
   content: '';
@@ -328,6 +333,16 @@ a {
     display: flex;
     justify-content: space-between;
   }
+
+  .social-icons a {
+    transition: all 0.3s ease-in;
+  }
+
+  .social-icons a:hover {
+    color: var(--clr-accent);
+    transform: scale(1.5);
+  }
+
   .menu-container {
     height: 60vh;
     align-self: center;
